# Connext

./: README.md  pyproject.toml
connext/: db.sqlite3  manage.py
connext/connext/: asgi.py  settings.py  urls.py  wsgi.py
connext/ml_models/image_captioning/: Dockerfile  app.py
connext/ml_models/image_captioning/builder/: requirements.txt
connext/ml_models/image_captioning/src/: app.py
connext/ml_models/reranker/reranker/: README.md  samconfig.toml  template.yaml
connext/ml_models/semantic-search/: Dockerfile  README.md  requirements.txt  samconfig.toml  template.yaml
connext/ml_models/semantic-search/semantic-search/: app.py
connext/ml_models/text-embedder/: Dockerfile
connext/ml_models/text-embedder/builder/: requirements.txt
connext/ml_models/text-embedder/src/: app.py  test_input.json
connext/ml_models/text_embedding/: script.py  test_input.json
connext/ml_models/text_embedding/src/: app.py
connext/ml_models/tfidf-text-search/: README.md  samconfig.toml  template.yaml
connext/ml_models/tfidf-text-search/.aws-sam/: build.toml
connext/ml_models/tfidf-text-search/tfidf-text-search/: app.py  (+1 more)
connext/ml_models/tfidf_similarity_search/: Dockerfile  template.yaml  tfidf_vectorizer.joblib
connext/photos/: admin.py  apps.py  models.py  signals.py  storage.py  tests.py  urls.py  views.py
connext/photos/migrations/: 0001_add_vector_extension.py  0001_initial.py  0002_alter_photo_user_delete_user.py  0002_photo_embedding.py  0003_alter_photo_image.py  0004_alter_photo_image.py  add_vector_extension.py
connext/photos/utils/: search_utils.py
(+9 files in other folders)
